# substraite-template

node/: Cargo.toml
node/src/: rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: impls.rs  lib.rs  voter_bags.rs
